<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createCollector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <ScrollView
        android:id="@+id/scrollCreateCollector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/crearColeccionista"
            android:textColor="@color/dark_green"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nombre"
            android:textColor="@color/dark_green"
            android:labelFor="@id/nombreColeccionista"/>

        <EditText
            android:id="@+id/nombreColeccionista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            android:background="@drawable/background_formulario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/telefono"
            android:textColor="@color/dark_green"
            android:labelFor="@id/telefono"/>

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="phone"
            android:importantForAutofill="no"
            android:background="@drawable/background_formulario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            android:textColor="@color/dark_green"
            android:labelFor="@id/email"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:background="@drawable/background_formulario"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createCollectorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/crearColeccionista"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>