<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/albums"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.album.AlbumFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

...
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        tools:listitem="@layout/album_item"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/plus_icon_white"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="5dp"
...
